Passenger Persist checked

--- a/src/BusSys/UserBundle/Resources/config/routing.yml
+++ b/src/BusSys/UserBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ bus_sys_user_homepage:
 check_add_data_to_bus_table:
     pattern:  /check/bus/adddata
     defaults: { _controller: BusSysUserBundle:DBconnect:bus }
+    
+check_add_data_to_passenger_table:
+    pattern:  /check/passenger/adddata
+    defaults: { _controller: BusSysUserBundle:DBconnect:passenger }
